# BadEngine

./: .gitignore  CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/Color/: color.h
Engine/Core/MountManager/: mountmanager.h
Engine/Core/Types/: Types.h
Engine/Graphics/: CMakeLists.txt
Engine/Graphics/Mesh/: mesh.cpp  mesh.h
Engine/Graphics/Shader/: shader.cpp  shader.h
Engine/Graphics/Window/: window.h
Engine/System/: CMakeLists.txt
Engine/System/Camera/: camera.cpp  camera.h
Engine/System/Events/: events.cpp  events.h
Engine/System/MountManager/: mountmanager.cpp  mountmanager.h
Engine/System/Window/: window.cpp  window.h
libs/: CMakeLists.txt
